[package]
name = "aprs-utils"
version = "0.1.0"
authors = ["ido <ido.roseman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
hound = "3.4.0"

[[bin]]
name = "aprs-encode"
path = "src/aprs-encode.rs"

[[bin]]
name = "aprs-message"
path = "src/aprs-message.rs"
